# FRAMKey

./: .gitignore  Cargo.toml  PLANS.archive.md  PLANS.md  README.md
.cargo/: config.toml
apps/framkey-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/framkey-desktop/src-tauri/capabilities/: dapp.json  default.json
apps/framkey-desktop/src-tauri/icons/: icon.icns
apps/framkey-desktop/src-tauri/permissions/autogenerated/: framkey_account_permissions.toml  framkey_authorize_keychain_helper.toml  framkey_btc_balance.toml  framkey_clear_provider_events.toml  framkey_clear_recovery_state.toml  framkey_clear_review_queue.toml  framkey_clear_transaction_activity.toml  framkey_create_keychain_vault.toml  framkey_dapp_session.toml  framkey_decide_review_request.toml  framkey_dismiss_review_request.toml  framkey_navigate_dapp.toml  framkey_pick_physical_backup_file.toml  framkey_pick_physical_backup_out_dir.toml  framkey_pick_recovery_files.toml  framkey_pick_recovery_out_dir.toml  framkey_pick_vault_backup_file.toml  framkey_provider_events.toml  framkey_provider_request.toml  framkey_provider_telemetry.toml  framkey_read_ch347_backup.toml  framkey_recover_keychain_vault.toml  framkey_recovery_smoke_pack.toml  framkey_recovery_state.toml  framkey_reveal_path.toml  framkey_review_queue.toml  framkey_revoke_account_permission.toml  framkey_rpc_health.toml  framkey_run_dapp_compatibility_check.toml  framkey_send_btc_transfer.toml  framkey_send_native_transfer.toml  framkey_send_token_transfer.toml  framkey_smoke_event.toml  framkey_status.toml  framkey_switch_session_chain.toml  framkey_transaction_activity.toml  framkey_validate_recovery_set.toml  framkey_wallet_assets.toml  framkey_write_ch347_backup.toml  open_dapp_webview.toml
apps/framkey-desktop/src-tauri/src/: btc.rs  ch347_helper.rs  chains.rs  commands.rs  config.rs  constants.rs  dapp.rs  main.rs  paths.rs  provider-injection.js  provider-injection.test.mjs  provider.rs  recovery_ops.rs  review.rs  rollback.rs  session.rs  signer_runtime.rs  state.rs  tests.rs  transactions.rs  wallet.rs
apps/framkey-desktop/src-tauri/src/review/: authorization.rs  ids.rs  payload.rs  queue.rs  summary.rs  tests.rs  types.rs
apps/framkey-desktop/ui/: dapp.html  dapp.js  index.html  main.js  qr.js  styles.css
crates/framkey-btc/: Cargo.toml
crates/framkey-btc/src/: lib.rs
crates/framkey-ch347/: Cargo.toml
crates/framkey-ch347-helper/: Cargo.toml
crates/framkey-ch347-helper/src/: lib.rs  main.rs  tests.rs
crates/framkey-ch347/src/: config.rs  device.rs  flashrom.rs  lib.rs  temp.rs  tests.rs
crates/framkey-cli/: Cargo.toml
crates/framkey-cli/src/: args.rs  constants.rs  device.rs  files.rs  main.rs  recovery.rs  signer.rs  signer_helper.rs  vault.rs
crates/framkey-core/: Cargo.toml
crates/framkey-core/src/: error.rs  identity.rs  lib.rs
crates/framkey-crypto/: Cargo.toml
crates/framkey-crypto/src/: aead.rs  hex.rs  lib.rs  random.rs  secret.rs
crates/framkey-device/: Cargo.toml
crates/framkey-device/src/: file_image.rs  info.rs  lib.rs  save_image.rs  vault_device.rs
crates/framkey-evm/: Cargo.toml
crates/framkey-evm/src/: encoding.rs  keys.rs  lib.rs  personal_sign.rs  signature.rs  tests.rs  transaction.rs  typed_data.rs  types.rs
crates/framkey-gbxcart/: Cargo.toml
crates/framkey-gbxcart/src/: constants.rs  lib.rs  tests.rs  transport.rs  types.rs
crates/framkey-ipc/: Cargo.toml
crates/framkey-ipc/src/: constants.rs  framing.rs  lib.rs  messages.rs  tests.rs
crates/framkey-keychain-macos/: Cargo.toml
crates/framkey-keychain-macos/src/: lib.rs  platform.rs  tests.rs  types.rs
crates/framkey-native-host/: Cargo.toml
crates/framkey-native-host/src/: config.rs  constants.rs  error.rs  handler.rs  main.rs  signer_helper.rs  tests.rs
crates/framkey-recovery/: Cargo.toml
crates/framkey-recovery/src/: bundle.rs  constants.rs  encoding.rs  lib.rs  policy.rs  shares.rs  tests.rs
crates/framkey-signer-helper/: Cargo.toml
crates/framkey-signer-helper/src/: handler.rs  io.rs  main.rs  metadata.rs  recovery.rs  tests.rs  validation.rs
crates/framkey-simulation/: Cargo.toml
crates/framkey-simulation/src/: alchemy.rs  assessment.rs  clients.rs  decoder.rs  lib.rs  model.rs  registry.rs  review.rs  tests.rs
crates/framkey-testkit/: Cargo.toml
crates/framkey-testkit/src/: in_memory_device.rs  lib.rs
crates/framkey-vault/: Cargo.toml
crates/framkey-vault/src/: constants.rs  dev_vault.rs  keychain_vault.rs  lib.rs  save_image.rs  test_image.rs  tests.rs  types.rs  util.rs
docs/: browser-bridge.md  btc-wallet-strategy.md  gbxcart-notes.md  product-roadmap.md  recovery-policy.md  tauri-defi-browser.md  threat-model.md  vault-format.md
extension/chrome/: manifest.json  native-host.dev.json.template
extension/chrome/src/: content-script.js  provider.js  service-worker.js
save_image_samples/: README.md
scripts/: prepare-tauri-sidecars.sh
