[workspace]
members = [
    "apps/framkey-desktop/src-tauri",
    "crates/framkey-cli",
    "crates/framkey-core",
    "crates/framkey-crypto",
    "crates/framkey-device",
    "crates/framkey-evm",
    "crates/framkey-gbxcart",
    "crates/framkey-ipc",
    "crates/framkey-keychain-macos",
    "crates/framkey-native-host",
    "crates/framkey-recovery",
    "crates/framkey-simulation",
    "crates/framkey-signer-helper",
    "crates/framkey-testkit",
    "crates/framkey-vault",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive"] }
getrandom = "0.3"
k256 = "0.13"
localauthentication = { package = "apple-localauthentication", version = "0.3.4" }
security-framework = { version = "3.7", features = ["OSX_10_15"] }
security-framework-sys = "2.17"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
reed-solomon-erasure = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
serialport = "4"
tauri = "2.11.2"
tauri-build = "2.6.2"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
