[package]
name = "framkey-btc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
bitcoin.workspace = true
framkey-core = { path = "../framkey-core" }
framkey-crypto = { path = "../framkey-crypto" }
serde.workspace = true
serde_json.workspace = true
