[package]
name = "framkey-ch347-helper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
framkey-ch347 = { path = "../framkey-ch347" }
framkey-core = { path = "../framkey-core" }
framkey-crypto = { path = "../framkey-crypto" }
framkey-device = { path = "../framkey-device" }
serde.workspace = true
serde_json.workspace = true
