[package]
name = "framkey-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
clap.workspace = true
framkey-crypto = { path = "../framkey-crypto" }
framkey-ch347 = { path = "../framkey-ch347" }
framkey-core = { path = "../framkey-core" }
framkey-device = { path = "../framkey-device" }
framkey-evm = { path = "../framkey-evm" }
framkey-gbxcart = { path = "../framkey-gbxcart" }
framkey-ipc = { path = "../framkey-ipc" }
framkey-keychain-macos = { path = "../framkey-keychain-macos" }
framkey-recovery = { path = "../framkey-recovery" }
framkey-vault = { path = "../framkey-vault" }
serde_json.workspace = true
