[package]
name = "framkey-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
blake3.workspace = true
chacha20poly1305.workspace = true
framkey-core = { path = "../framkey-core" }
getrandom.workspace = true
serde.workspace = true
zeroize.workspace = true
