[package]
name = "framkey-evm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
framkey-core = { path = "../framkey-core" }
framkey-crypto = { path = "../framkey-crypto" }
k256.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
