[package]
name = "framkey-keychain-macos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
blake3.workspace = true
framkey-core = { path = "../framkey-core" }
framkey-crypto = { path = "../framkey-crypto" }

[target.'cfg(target_os = "macos")'.dependencies]
localauthentication.workspace = true
security-framework.workspace = true
security-framework-sys.workspace = true
