[package]
name = "framkey-native-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
framkey-crypto = { path = "../framkey-crypto" }
framkey-device = { path = "../framkey-device" }
framkey-gbxcart = { path = "../framkey-gbxcart" }
framkey-ipc = { path = "../framkey-ipc" }
serde.workspace = true
serde_json.workspace = true
