[package]
name = "framkey-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[build-dependencies]
tauri-build.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
framkey-btc = { path = "../../../crates/framkey-btc" }
framkey-ch347 = { path = "../../../crates/framkey-ch347" }
framkey-ch347-helper = { path = "../../../crates/framkey-ch347-helper" }
framkey-crypto = { path = "../../../crates/framkey-crypto" }
framkey-device = { path = "../../../crates/framkey-device" }
framkey-evm = { path = "../../../crates/framkey-evm" }
framkey-gbxcart = { path = "../../../crates/framkey-gbxcart" }
framkey-ipc = { path = "../../../crates/framkey-ipc" }
framkey-recovery = { path = "../../../crates/framkey-recovery" }
framkey-simulation = { path = "../../../crates/framkey-simulation" }
framkey-vault = { path = "../../../crates/framkey-vault" }
getrandom.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true

[dev-dependencies]
framkey-core = { path = "../../../crates/framkey-core" }
